Adminbar and search functionality on mobile: bug fixing and styling tweaks: adjustment for login window

--- a/wp-content/mu-plugins/css/openlab-toolbar.less
+++ b/wp-content/mu-plugins/css/openlab-toolbar.less
@@ -331,6 +331,11 @@
                         padding: 3% 5%;
                     }
                 }
+                @media (max-width: @screen-xs-max){
+                    .ab-submenu{
+                        background: #fff;
+                    }
+                }
             }
             #wp-admin-bar-updates{
                 @media (max-width: 767px){
